--- a/src/Modules/Laser.Orchard.NwazetIntegration/Views/Addresses/AddressEditor.cshtml
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Views/Addresses/AddressEditor.cshtml
@@ -6,9 +6,13 @@
 @model AddressEditViewModel
 
 @{
+    Script.Include("address-configuration.js", "address-configuration.min.js").AtFoot();
+
     List<SelectListItem> AddressTypeLocalize = new List<SelectListItem>();
     AddressTypeLocalize.Add(new SelectListItem() { Text = T("Billing Address").Text, Value = AddressRecordType.BillingAddress.ToString() });
     AddressTypeLocalize.Add(new SelectListItem() { Text = T("Shipping Address").Text, Value = AddressRecordType.ShippingAddress.ToString() });
+
+    var guid = Guid.NewGuid().ToString();
 }
 
 @helper EditorForString(
@@ -25,44 +29,58 @@
     </div>
 }
 @*This should generally be put in a form*@
-<div class="address-input">
-    @Html.LabelFor(m => m.AddressType, T("Address Type").Text, new { })
-    @Html.DropDownListFor(m => m.AddressType, AddressTypeLocalize)
-</div>
-@* Personal information *@
-@EditorForString(m => m.Honorific,
-    T("Title"),
-    T("Title or honorific, e.g. Mr., Mrs., Dr., San, etc."))
-@EditorForString(m => m.FirstName,
-    T("First Name"),
-    T("Please include middle name or initial as appropriate."),
-    true)
-@EditorForString(m => m.LastName,
-    T("Last Name"),
-    T("Please include middle name or initial as appropriate."),
-    true)
-@EditorForString(m => m.Company,
-    T("Company"))
-@* 1. Country *@
-@*    This must be selected among the countries configured *@
-<div class="address-input address-text-input adrress-country">
-    @Html.LabelFor(m => m.Country, T("Country").Text, new { @class = "required" })
-    @Html.DropDownListFor(m => m.Country,
-        Model.Countries)
-    <div class="hint">@T("Select a valid country from the list.")</div>
-</div>
-@* 2. City *@
-@EditorForString(m => m.City,
-    T("City"))
-@* 3. Province and ZIP code *@
-@EditorForString(m => m.Province,
-    T("State, province, prefecture, republic or region"),
-    T("Please specify the state, province, prefecture, republic or region code as appropriate. For example, 'WA' for the state of Washington in the United States."))
-@EditorForString(m => m.PostalCode,
-    T("Postal or ZIP code"))
-@* 4. Street *@
-<div class="address-input address-text-input">
-    @Html.LabelFor(m => m.Address1, T("Address").Text, new { @class = "required" })
-    @Html.EditorFor(m => m.Address1)
-    @Html.EditorFor(m => m.Address2)
-</div>
+    <div class="address-editor" id="@guid">
+        <div class="address-input">
+            @Html.LabelFor(m => m.AddressType, T("Address Type").Text, new { })
+            @Html.DropDownListFor(m => m.AddressType, AddressTypeLocalize)
+        </div>
+        @* Personal information *@
+        @EditorForString(m => m.Honorific,
+            T("Title"),
+            T("Title or honorific, e.g. Mr., Mrs., Dr., San, etc."))
+        @EditorForString(m => m.FirstName,
+            T("First Name"),
+            T("Please include middle name or initial as appropriate."),
+            true)
+        @EditorForString(m => m.LastName,
+            T("Last Name"),
+            T("Please include middle name or initial as appropriate."),
+            true)
+        @EditorForString(m => m.Company,
+            T("Company"))
+        @* 1. Country *@
+        @*    This must be selected among the countries configured *@
+        <div class="address-input address-text-input address-country">
+            @Html.LabelFor(m => m.Country, T("Country").Text, new { @class = "required" })
+            @Html.DropDownListFor(m => m.Country,
+                Model.Countries)
+            <div class="hint">@T("Select a valid country from the list.")</div>
+        </div>
+        @* 2. City *@
+        @EditorForString(m => m.City,
+            T("City"))
+        @* 3. Province and ZIP code *@
+        @EditorForString(m => m.Province,
+            T("State, province, prefecture, republic or region"),
+            T("Please specify the state, province, prefecture, republic or region code as appropriate. For example, 'WA' for the state of Washington in the United States."))
+        @EditorForString(m => m.PostalCode,
+            T("Postal or ZIP code"))
+        @* 4. Street *@
+        <div class="address-input address-text-input">
+            @Html.LabelFor(m => m.Address1, T("Address").Text, new { @class = "required" })
+            @Html.EditorFor(m => m.Address1)
+            @Html.EditorFor(m => m.Address2)
+        </div>
+    </div>
+@using(Script.Foot()) {
+    <script type="text/javascript">
+        $(document).ready(function () {
+            // configure the script that will dynamically load configured address settings
+            $('#@guid').addressConfiguration({
+                // set all instance specific information here
+                // e.g. urls for ajax calls and the jquery selectors
+                // for the different elements of the address
+            });
+        });
+    </script>
+}
