--- a/src/Modules/Laser.Orchard.NwazetIntegration/Views/Addresses/AddressEditor.cshtml
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Views/Addresses/AddressEditor.cshtml
@@ -58,18 +58,34 @@
         </div>
         @* 2. City *@
         <div class="address-input address-text-input address-city">
+            @Html.HiddenFor(m => m.CityId)
             @Html.LabelFor(m => m.City, T("City").Text, new { @class = "required" })
-            <select id="@Html.FieldIdFor(m => m.City)"
-                    class="required"
-                    name="@Html.NameFor(m => m.City)"></select>
+            @if (Model.CityId >= 0) {
+                <select id="@Html.FieldIdFor(m => m.City)"
+                        class="required address-input"
+                        name="@Html.NameFor(m => m.City)"></select>
+            } else {
+                <input id="@Html.FieldIdFor(m => m.City)"
+                       class="required address-input"
+                       name="@Html.NameFor(m => m.City)" type="text"
+                       value="@Model.City" />
+            }
             <div class="hint">@T("Select a city from the list.")</div>
         </div>
         @* 3. Province and ZIP code *@
         <div class="address-input address-text-input address-province">
+            @Html.HiddenFor(m => m.ProvinceId)
             @Html.LabelFor(m => m.Province, T("Province").Text, new { @class = "required" })
-            <select id="@Html.FieldIdFor(m => m.Province)"
-                    class="required"
-                    name="@Html.NameFor(m => m.Province)"></select>
+            @if (Model.ProvinceId >= 0) {
+                <select id="@Html.FieldIdFor(m => m.Province)"
+                        class="required address-input"
+                        name="@Html.NameFor(m => m.Province)"></select>
+            } else {
+                <input id="@Html.FieldIdFor(m => m.Province)"
+                       class="required address-input"
+                       name="@Html.NameFor(m => m.Province)" type="text"
+                       value="@Model.Province" />
+            }
             <div class="hint">@T("Please specify the state, province, prefecture, republic or region code as appropriate. For example, 'WA' for the state of Washington in the United States.")</div>
         </div>
         @EditorForString(m => m.PostalCode,
@@ -91,7 +107,9 @@
                 // for the different elements of the address
                 countriesInput: '#@Html.FieldIdFor(m => m.CountryId)',
                 citiesInput: '#@Html.FieldIdFor(m => m.City)',
+                cityId: '#@Html.FieldIdFor(m => m.CityId)',
                 provincesInput: '#@Html.FieldIdFor(m => m.Province)',
+                provinceId: '#@Html.FieldIdFor(m => m.ProvinceId)',
                 getCities: {
                     url: '@Url.Action("GetCities", "Addresses", new { area = "Laser.Orchard.NwazetIntegration" })'
                 },
