BO UI for advanced order address

--- a/src/Modules/Laser.Orchard.NwazetIntegration/Assets/admin-style.scss
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Assets/admin-style.scss
@@ -60,3 +60,18 @@
         }
     }
 }
+.advanced-addresses {
+    .order-address-editor {
+        .shipping-address {
+        }
+
+        .billing-address {
+        }
+
+        .address-editor{
+            .address-input{
+                display: inline-block;
+            }
+        }
+    }
+}
