--- a/src/Modules/Laser.Orchard.NwazetIntegration/Styles/admin-style.css
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Styles/admin-style.css
@@ -21,3 +21,6 @@
       content: ')'; }
     .territories-list .single-territory .territory-info .territory-children-counts .single-count {
       display: inline-block; }
+
+.advanced-addresses .order-address-editor .address-editor .address-input {
+  display: inline-block; }
