Advanced address configuration in order BO UI

--- a/src/Modules/Laser.Orchard.NwazetIntegration/Assets/admin-style.scss
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Assets/admin-style.scss
@@ -71,6 +71,9 @@
         .address-editor{
             .address-input{
                 display: inline-block;
+                .hint{
+                    display: inline-block;
+                }
             }
         }
     }
