WIP to support adding alpha-2 for the countries

--- a/src/Modules/Laser.Orchard.NwazetIntegration/Assets/admin-style.scss
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Assets/admin-style.scss
@@ -26,6 +26,12 @@
 
                 .radio-label {
                 }
+
+                input[type=text] {
+                    &.iso-alpha-2 {
+                        width: 4em;
+                    }
+                }
             }
 
             .territory-children-counts {
