WIP for emotion countries integration

--- a/src/Modules/Laser.Orchard.NwazetIntegration/Assets/admin-style.scss
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Assets/admin-style.scss
@@ -30,7 +30,12 @@
                 input[type=text] {
                     &.iso-alpha-2 {
                         width: 4em;
+                        display: none;
                     }
+                }
+                
+                .country-radio:checked ~ input[type=text].iso-alpha-2 {
+                    display: inline-block;
                 }
             }
 
