--- a/src/Modules/Laser.Orchard.NwazetIntegration/Views/EditorTemplates/AddressEditViewModel.cshtml
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Views/EditorTemplates/AddressEditViewModel.cshtml
@@ -182,7 +182,7 @@
         });
 </script>
 }
-@* Use this for the properties that don't have advance handling *@
+@* Use this for the properties that don't have advanced handling *@
 @helper BasicChangeHandler(
     Expression<Func<AddressEditViewModel, string>> property, string stub) {
     <text>
