--- a/src/Modules/Laser.Orchard.NwazetIntegration/Views/EditorTemplates/AddressEditViewModel.cshtml
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Views/EditorTemplates/AddressEditViewModel.cshtml
@@ -90,7 +90,7 @@
              title="@T("Select a city from the list.")">
             @Html.HiddenFor(m => m.CityId)
             @Html.LabelFor(m => m.City, T("City").Text, new { @class = "required" })
-            @if (Model.CityId >= 0) {
+            @if (Model.CityId > 0) {
                 <select id="@Html.FieldIdFor(m => m.City)"
                         class="required address-input"
                         name="@Html.NameFor(m => m.City)"></select>
@@ -108,7 +108,7 @@
              title="@T("Please specify the state, province, prefecture, republic or region code as appropriate. For example, 'WA' for the state of Washington in the United States.")">
             @Html.HiddenFor(m => m.ProvinceId)
             @Html.LabelFor(m => m.Province, T("Province").Text, new { @class = "required" })
-            @if (Model.ProvinceId >= 0) {
+            @if (Model.ProvinceId > 0) {
                 <select id="@Html.FieldIdFor(m => m.Province)"
                         class="required address-input"
                         name="@Html.NameFor(m => m.Province)"></select>
