--- a/src/Modules/Laser.Orchard.NwazetIntegration/Views/EditorTemplates/SiteSettings/AddressConfigurationDetails.cshtml
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Views/EditorTemplates/SiteSettings/AddressConfigurationDetails.cshtml
@@ -104,7 +104,7 @@ index++;
 </div>
     
     }
-@if (hierarchy != null && hierarchy.Territories.Any()) {
+@if (hierarchy != null && hierarchy.Record.Territories.Any()) {
     // Initially only show the top level?
     // Each territory may be marked as Country, Province or City 
     <div class="territories-list">
